static/main.css
.main{
    height:200px;
}

body{
    font-size: 16px;
}

.wrapper {
    display: flex;
    width: 100%;
    align-items: stretch;
}

div#toggle {
    z-index: 2;
    position:fixed;
    transition-duration: 1s;
}

div#toggle.show{
    left: 250px;!important;
}

div#toggle button{
    background-color: #f7f7f7;
    border-left:0;
    border-radius: 0 20% 20% 0;
    font-size: 25px;
}

nav#sidebar {
    z-index: 1;
    min-width: 250px;
    max-width: 250px;
    height: 100%;
    position: fixed;
    top: 0;
    padding-left: 1em;
    left: 0;
    background-color: #f7f7f7;
}

nav#sidebar h4{
    margin-bottom: 1em;
    margin-top: 1em;
}

nav#sidebar ul{
    list-style: none;
    padding-left: 0;
}

@media (min-device-width: 768px) {
    div#toggle button{
        display: none;
    }
    .content {
        margin-left: 250px;
    }
}

#footer{
    position: fixed;
    bottom: 0;
    left: 0;
    padding: 5px 10px 5px 10px;
    max-width: 240px;
    min-width: 240px;
}

@media (max-device-width: 768px) {
    nav#sidebar, div#footer {
        margin-left: -250px !important;
    }

    div#footer{
        font-size: 75%;
    }

    nav#sidebar.visible, div#footer.visible{
        margin-left: -0px !important;
    }

    nav#sidebar.visible {
        border-right: 1px #ccc solid;
    }
    body {
        font-size: 22px;
    }
}

.category-button button{
    width: 100%;
}

.category-filter{
    padding-bottom: 2em;
}

.categories {
    overflow-y: auto;
    max-height: 250px;
    display: inline-block;
    padding-left: 20px;
}

.content{
    margin-top: 1.5em;
    font-size: 130%;
}

.tracks-table{
    padding-top: 1em;
}

.track-statistics table {
    font-size: 16px;
}
.track-statistics th { text-align: center;}
.track-statistics td:nth-child(2n) { text-align: left }
.track-statistics .links {
    text-align: left;
}
.track-statistics .tab {
    text-transform: capitalize;
}
.track-statistics .links a {
    padding-right: .5em;
    color: inherit;
}

.track-statistics .links img {
    width: 16px;
    height: 16px;
}

@media (max-device-width: 768px) {
    .select-categories div{
        max-height: 200px;
        overflow-y: auto;
        display:inline-block;
        padding-left: 20px;
    }
    .select-categories{
        padding-bottom: 20px;
    }
}

.select-categories label.checkbox {
    font-size: 0.6em;
    margin-top: 0;
}

.chart-tooltip{
    padding: 20px;
    min-width: 200px;
    font-size: 1.2em;
}

.chart-tooltip h4{
    text-align: center;
}

.track-count-controls{
    font-size: 0.8em;
    padding-bottom: 1em;
}

.dj-counts-tooltip ul{
    max-height: 400px;
    min-height: 0;
    overflow-y: auto;
}

.categories-year-chart {
    padding-bottom: 1em;
}

.content h2{
    text-align: center;
}

.overlay span{
    width: 25%;
    margin-right: 0.5em;
    color: #f7f7f7;
}

